--- a/terminal/about.html
+++ b/terminal/about.html
@@ -107,6 +107,10 @@
     <span class="terminal-text-highlighted">]</span>
     <span>⚡️</span>
     <span id="typewriter"></span>
+    <span id="typewriter-text" style="display: none;">
+    <span class="terminal-text-highlighted">make </span>
+    <span class="terminal-text">about</span>
+  </span>
     <script type="text/javascript">
       const typewriter = new Typewriter("#typewriter", {
         loop: false,
@@ -119,9 +123,8 @@
         .start();
 
       setTimeout(function () {
-        // set cursor color to transparent, because i can't delete it
-        document.querySelector(".Typewriter__cursor").style.backgroundColor =
-          "transparent";
+        document.getElementById("typewriter").style.display = "none";
+        document.getElementById("typewriter-text").style.display = "inline";
         document.getElementById("line-2").style.display = "block";
         document.getElementById("input-0").focus();
       }, 2000);
