--- a/index.html
+++ b/index.html
@@ -26,31 +26,56 @@
       <div class="terminal-window-name">florianschmitz@MacBook-Pro:~</div>
     </div>
     <nav>
-      <a id="home" class="nav-button-active" data-hotkey="Meta+1" href="index.html">
+      <a
+        id="home"
+        class="nav-button-active"
+        data-hotkey="Meta+1"
+        href="index.html"
+      >
         <ul>
           <li class="nav-button-text">~</li>
           <li>⌘1</li>
         </ul>
       </a>
-      <a id="about" class="nav-button" data-hotkey="Meta+2" href="terminal/about.html">
+      <a
+        id="about"
+        class="nav-button"
+        data-hotkey="Meta+2"
+        href="terminal/about.html"
+      >
         <ul>
           <li class="nav-button-text">About</li>
           <li>⌘2</li>
         </ul>
       </a>
-      <a id="projects" class="nav-button" data-hotkey="Meta+3" href="terminal/projects.html">
+      <a
+        id="projects"
+        class="nav-button"
+        data-hotkey="Meta+3"
+        href="terminal/projects.html"
+      >
         <ul>
           <li class="nav-button-text">Projects</li>
           <li>⌘3</li>
         </ul>
       </a>
-      <a id="blog" class="nav-button" data-hotkey="Meta+4" href="terminal/blog.html">
+      <a
+        id="blog"
+        class="nav-button"
+        data-hotkey="Meta+4"
+        href="terminal/blog.html"
+      >
         <ul>
           <li class="nav-button-text">Blog</li>
           <li>⌘4</li>
         </ul>
       </a>
-      <a id="contact" class="nav-button" data-hotkey="Meta+5" href="terminal/contact.html">
+      <a
+        id="contact"
+        class="nav-button"
+        data-hotkey="Meta+5"
+        href="terminal/contact.html"
+      >
         <ul>
           <li class="nav-button-text">Contact</li>
           <li>⌘5</li>
@@ -189,7 +214,11 @@
                   return;
                 }
 
-                if (
+                if (document.getElementById(`input-${counter}`).value === "") {
+                  document
+                    .getElementById("line-2")
+                    .appendChild(document.createElement("div"));
+                } else if (
                   document.getElementById(`input-${counter}`).value === "help"
                 ) {
                   const help = document.createElement("div");
