make terminal navbar and input responsive

--- a/terminal/contact.html
+++ b/terminal/contact.html
@@ -29,23 +29,13 @@
       <div class="terminal-window-name">florianschmitz@MacBook-Pro:~</div>
     </div>
     <nav>
-      <a
-        id="home"
-        class="nav-button"
-        data-hotkey="Meta+1"
-        href="../index.html"
-      >
+      <a id="home" class="nav-button" data-hotkey="Meta+1" href="../index.html">
         <ul>
           <li class="nav-button-text">~</li>
           <li>⌘1</li>
         </ul>
       </a>
-      <a
-        id="about"
-        class="nav-button"
-        data-hotkey="Meta+2"
-        href="about.html"
-      >
+      <a id="about" class="nav-button" data-hotkey="Meta+2" href="about.html">
         <ul>
           <li class="nav-button-text">About</li>
           <li>⌘2</li>
@@ -62,12 +52,7 @@
           <li>⌘3</li>
         </ul>
       </a>
-      <a
-        id="blog"
-        class="nav-button"
-        data-hotkey="Meta+4"
-        href="blog.html"
-      >
+      <a id="blog" class="nav-button" data-hotkey="Meta+4" href="blog.html">
         <ul>
           <li class="nav-button-text">Blog</li>
           <li>⌘4</li>
@@ -85,7 +70,6 @@
         </ul>
       </a>
       <span class="nav-add-button">+</span>
-      <span class="nav-more-button">&gt;&gt;</span>
     </nav>
     <script>
       document.addEventListener("keydown", (keyboardEvent) => {
