--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         </ul>
       </a>
       <span class="nav-add-button">+</span>
+      <span class="nav-menu-button">&gt;&gt;</span>
     </nav>
     <script>
       document.addEventListener("keydown", (keyboardEvent) => {
