--- a/terminal/blog.html
+++ b/terminal/blog.html
@@ -29,23 +29,13 @@
       <div class="terminal-window-name">florianschmitz@MacBook-Pro:~</div>
     </div>
     <nav>
-      <a
-        id="home"
-        class="nav-button"
-        data-hotkey="Meta+1"
-        href="../index.html"
-      >
+      <a id="home" class="nav-button" data-hotkey="Meta+1" href="../index.html">
         <ul>
           <li class="nav-button-text">~</li>
           <li>⌘1</li>
         </ul>
       </a>
-      <a
-        id="about"
-        class="nav-button"
-        data-hotkey="Meta+2"
-        href="about.html"
-      >
+      <a id="about" class="nav-button" data-hotkey="Meta+2" href="about.html">
         <ul>
           <li class="nav-button-text">About</li>
           <li>⌘2</li>
@@ -85,6 +75,7 @@
         </ul>
       </a>
       <span class="nav-add-button">+</span>
+      <span class="nav-menu-button">&gt;&gt;</span>
     </nav>
     <script>
       document.addEventListener("keydown", (keyboardEvent) => {
