--- a/terminal/projects.html
+++ b/terminal/projects.html
@@ -85,6 +85,7 @@
         </ul>
       </a>
       <span class="nav-add-button">+</span>
+      <span class="nav-menu-button">&gt;&gt;</span>
     </nav>
     <script>
       document.addEventListener("keydown", (keyboardEvent) => {
